--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation('io.jsonwebtoken:jjwt-api:0.10.5')
+    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.10.5',
+            'io.jsonwebtoken:jjwt-jackson:0.10.5')
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
