feat: 인터셉터 JWT 헤더로 발급 처리, 추후 REDIS로 관리 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,9 @@ spring:
     host: 127.0.0.1
     port: 6379
     password:
+
+logging:
+  level:
+    org:
+      springframework:
+        web: debug
