--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         web-allow-others: true
       path: /h2-console
   # DataSource
-  database:
+  datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
     username: sa
@@ -28,7 +28,7 @@ spring:
         diarect: org.hibernate.dialect.MySQL5InnoDBDialect
         show_sql: true
         format_sql: true
-        ddl-auto: update # ???? ??? ???? ??
+        ddl-auto: create-drop
   # Redis
   redis:
     host: 127.0.0.1
